modification in msgbox

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script defer src="script.js"></script>
 </head>
 <body style="background-image: url('./wp-bg.jpg');">
-    <h1 class="text-center sticky-top mx-4 my-4 bg-success border border-success rounded">iChAt.io</h1>
+    <h1 class="text-center sticky-top mx-4 my-4 bg-success border border-success rounded" >iChAt.io</h1>
     <div class="form-row mx-5" id="inp">
         <input class="col-3 input mx-2" placeholder="Enter Username " id='inpbox'>
         <input class="col-3 input mx-2" placeholder="Enter Password " type='password' id='pwd'>
@@ -33,7 +33,7 @@
             <div class="col-1"></div>
             <div class="col-10 ">
                 <div >
-                <ul class="list-group border border-primary rounded " id='ulmsg' ></ul>
+                <ul  class="list-group border border-primary rounded mb-5 " id='ulmsg' ></ul>
                 </div>
                 <div  class="form-row mx-5 my-2 fixed-bottom sticky-bottom" id="chatbox">
                     <div class=col-1></div> 
