--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
                       </div>
                       <div class="alert alert-dark" role="alert">
                         
-                            Just click on signup in case you are a new user.The user remains registered unless the server is active.
+                            Just click on signup in case you are a new user.The user remains registered until the server is active.
                       </div>
                       
                       <div class="alert alert-dark" role="alert">
